[package]
name = "mdbook-keeper"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mdbook_keeper_lib"
path = "src/lib.rs"

[[bin]]
name = "mdbook-keeper"
path = "src/bin.rs"

[dependencies]
anyhow = "1.0.58"
clap = "3.2.8"
mdbook = "0.4.21"
semver = "1.0.12"
serde = { version="1.0.138", features=["derive"] }
serde_json = "1.0.82"
skeptic = "0.13.7"
