[package]
name = "mdbook-keeper"
version = "0.1.1"
edition = "2021"
authors = ["Tom Kunc <tom@tfpk.dev>"]
license = "MIT OR Apache-2.0"
description = "An improved testing experience for mdbook."
documentation = "https://github.com/tfpk/mdbook-keeper/"
repository = "https://github.com/tfpk/mdbook-keeper/"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mdbook_keeper_lib"
path = "src/lib.rs"

[[bin]]
name = "mdbook-keeper"
path = "src/bin.rs"

[dependencies]
anyhow = "1.0.58"
clap = "3.2.8"
mdbook = "0.4.21"
semver = "1.0.12"
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"
pulldown-cmark = { version = "0.9", default-features = false }
bytecount = "0.6"
slug = "0.1.4"
toml = "0.5.9"
cargo_metadata = "0.15.0"
error-chain = "0.12.4"
walkdir = "2.3.2"
current_platform = "0.2.0"
tempfile = "3.3.0"
fs_extra = "1.2.0"
atty = "0.2.14"
